k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olfactory-frontend
  labels:
    app: olfactory-frontend
spec:
  type: ClusterIP
  selector:
    app: olfactory-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
